--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 
 <head>
-
+    <!--trying to add Favicon-->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" type="img/png" href="/favicon.ico"/>
+    <link href="../img/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+    <link rel="shortcut icon" type="img/png" href="../img/favicon.png"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
