--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+            <!--<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
+                    <!--<li class="hidden">
                         <a href="#page-top"></a>
                     </li>
                     <li>
@@ -68,7 +68,7 @@
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-        </div>
+        <!--</div>
         <!-- /.container -->
     </nav>
 
@@ -80,9 +80,9 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">DIBBS</h1>
                         <p class="intro-text">Welcome to the new marketplace for saving food.
-                            <br>Let's go.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
+                            <br>Coming soon.</p>
+                        <!--<a href="#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>-->
                         </a>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <!--<section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>How it works</h2>
@@ -102,25 +102,25 @@
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="content-section text-center">
+    <!--<section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Sign up</h2>
                     <p>We're currently taking emails for beta testers.</p>
                     <!--<a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>-->
-                </div>
+                <!--</div>
             </div>
         </div>
     </section>
     <!-- Change the width and height values to suit you best -->
-<div class="typeform-widget" data-url="https://kat333.typeform.com/to/SALBRI" data-text="dibbsUser" style="width:100%;height:500px;"></div>
+<!--<div class="typeform-widget" data-url="https://kat333.typeform.com/to/SALBRI" data-text="dibbsUser" style="width:100%;height:500px;"></div>
 <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by<a href="https://www.typeform.com/examples/?utm_campaign=SALBRI&amp;utm_source=typeform.com-6906422-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-poweredbytypeform&amp;utm_term=EN" style="color: #999" target="_blank">Typeform</a></div>
 
 
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <!--<section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>For Vendors</h2>
@@ -142,7 +142,7 @@
                     <li>
                         <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>-->
-                </ul>
+                <!--</ul>
             </div>
         </div>
     </section>
