--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">DIBBS</h1>
-                        <p class="intro-text">Welcome to the new marketplace for fighting hunger by saving food.
+                        <p class="intro-text">Welcome to the new marketplace
+                            <br>to fight hunger by saving food.
+                            <br>
                             <br>Coming soon.</p>
                         <!--<a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>-->
