--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
+                        <br><br><br><br>
                         <h1 class="brand-heading">DIBBS</h1>
                         <p class="intro-text">Welcome to the new marketplace
                             <br>to fight hunger by saving food.
-                            <br>
-                            <br>Coming soon.</p>
+                            <br><br>
+                            <br>Coming Summer 2017.</p>
                         <!--<a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>-->
                         </a>
