added mailchimp email subscribers and social media buttons

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <!-- Theme CSS -->
     <link href="css/grayscale.min.css" rel="stylesheet">
 
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Add font awesome icons -->
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-instagram"></a>
+
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -83,7 +92,75 @@
                         <p class="intro-text">Welcome to the new marketplace
                             <br>to fight hunger by saving food.
                             <br><br>
-                            <br>Coming Summer 2017.</p>
+
+                            <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#1F1A14; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    /*
+    possible style from:
+    http://jessicaslaughter.co/blog/how-to-customize-the-mailchimp-signup-form-on-your-blog/
+            Changes the style of the overall form
+        #mc_embed_signup {
+            background: #f8f8f8;
+            color: #000000;
+            padding: 20px;
+                text-align: center;
+        }
+
+        Styles the header text above the inputs
+        #mc_embed_signup h2 {
+            font-size: 18px;
+            margin: 0 0 20px;
+            color: #000000;
+            text-align: center;
+        }
+
+        Adds extra space around the input boxes
+        #mc_embed_signup .mc-field-group {
+            padding: 10px 0;
+        }
+
+         Styles the input boxes
+        #mc_embed_signup  input {
+            width: 200px;
+        }
+
+         Styles the subscribe button
+        #mc_embed_signup .button {
+            background-color: #000000;
+            color: #ffffff;
+            margin: 0 auto;
+        }
+    */
+
+    h3.uppercase {
+        text-transform: uppercase;
+    }
+
+    h3.lowercase {
+        text-transform: lowercase;
+    }
+
+    h3.capitalize {
+        text-transform: capitalize;
+    }
+
+
+</style>
+    <center><h3 class="lowercase">Stay updated on our progress:</h3></center>
+<div id="mc_embed_signup">
+<form action="//dibbs.us16.list-manage.com/subscribe/post?u=80457ffeae29753d705fcdd3b&amp;id=bd6d45d38c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_80457ffeae29753d705fcdd3b_bd6d45d38c" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+                            <!--<br>Coming Summer 2017.</p>-->
                         <!--<a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>-->
                         </a>
@@ -121,6 +198,76 @@
 <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by<a href="https://www.typeform.com/examples/?utm_campaign=SALBRI&amp;utm_source=typeform.com-6906422-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-poweredbytypeform&amp;utm_term=EN" style="color: #999" target="_blank">Typeform</a></div>
 
+<!-- Begin MailChimp Signup Form
+
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#000000; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    /*
+    possible style from:
+    http://jessicaslaughter.co/blog/how-to-customize-the-mailchimp-signup-form-on-your-blog/
+            Changes the style of the overall form
+        #mc_embed_signup {
+            background: #f8f8f8;
+            color: #000000;
+            padding: 20px;
+                text-align: center;
+        }
+
+        Styles the header text above the inputs
+        #mc_embed_signup h2 {
+            font-size: 18px;
+            margin: 0 0 20px;
+            color: #000000;
+            text-align: center;
+        }
+
+        Adds extra space around the input boxes
+        #mc_embed_signup .mc-field-group {
+            padding: 10px 0;
+        }
+
+         Styles the input boxes
+        #mc_embed_signup  input {
+            width: 200px;
+        }
+
+         Styles the subscribe button
+        #mc_embed_signup .button {
+            background-color: #000000;
+            color: #ffffff;
+            margin: 0 auto;
+        }
+    */
+
+    h3.uppercase {
+        text-transform: uppercase;
+    }
+
+    h3.lowercase {
+        text-transform: lowercase;
+    }
+
+    h3.capitalize {
+        text-transform: capitalize;
+    }
+
+
+</style>
+    <center><h3 class="lowercase">Stay updated on our progress:</h3></center>
+<div id="mc_embed_signup">
+<form action="//dibbs.us16.list-manage.com/subscribe/post?u=80457ffeae29753d705fcdd3b&amp;id=bd6d45d38c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <!--<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_80457ffeae29753d705fcdd3b_bd6d45d38c" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>-->
+
+<!--End mc_embed_signup-->
 
     <!-- Contact Section -->
     <!--<section id="contact" class="container content-section text-center">
@@ -155,10 +302,16 @@
     <div id="map"></div>-->
 
     <!-- Footer -->
-    <footer>
+    <footer id="footer">
         <div class="container text-center">
-            <p>&copy; DIBBS 2017</p>
-            <p>Say hi: DIBBS.UIUC@gmail.com</p>
+            <p><small>&copy; DIBBS 2017</small></p>
+            <p><small>Say hi: DIBBS.UIUC@gmail.com</small></p><br>
+
+
+            <a href="http://facebook.com/dibbsonfood" class="fa fa-facebook"><span class="label"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="http://twitter.com/dibbsonfood" class="fa fa-twitter"><span class="label"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="http://instagram.com/dibbsonfood" class="fa fa-instagram"><span class="label"></span></a>
+
         </div>
     </footer>
 
@@ -180,3 +333,4 @@
 </body>
 
 </html>
+
