changed "stay updated" to "get notified when we launch"

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 
 </style>
-    <center><h3 class="lowercase">Stay updated on our progress:</h3></center>
+    <center><h3 class="lowercase">Get notified when we launch:</h3></center>
 <div id="mc_embed_signup">
 <form action="//dibbs.us16.list-manage.com/subscribe/post?u=80457ffeae29753d705fcdd3b&amp;id=bd6d45d38c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email" required>
