--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- Add font awesome icons -->
+    <!-- Add font awesome icons
     <a href="#" class="fa fa-facebook"></a>
     <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-instagram"></a>
+    <a href="#" class="fa fa-instagram"></a>-->
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
